# parker

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.staging.toml  fly.toml
.github/workflows/: audit-on-push.yml  general.yml  publish-to-ghcr.yaml  scheduled-audit.yml
k8s/: README.md  deployment.yml  ingress.yml  namespace.yml  service.yml  speculaas-deployment.yml  speculaas-ingress.yml  speculaas-service.yml
src/: lib.rs  main.rs
tests/: health_check.rs  redirect.rs
tests/support/: mod.rs
