[package]
name = "parker"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
clap = "2.33.3"
env_logger = "0.8.2"
log = "0.4.11"
url = "2.2.0"

[dev-dependencies]
tokio = "0.2.22"
